# cpp-project-template

./: CMakeLists.txt
cmake/: compile_options.cmake
include/: CMakeLists.txt  main_entry.h
src/: CMakeLists.txt  main_entry.cc
src/app1/: CMakeLists.txt  main.cpp
src/bar/: bar.cc
src/foo/: CMakeLists.txt  foo.cc  foo.h
src/subdir1/: CMakeLists.txt  bar.cc  bar.h
src/subdir2/: CMakeLists.txt  foo.cc  foo.h
tests/: CMakeLists.txt
tests/subdir1/: CMakeLists.txt  test_bar.cc
